Bug 460437 - 'innerHtml doesn't update DOM when Html markup goes from Invalid to Valid'. r+sr=mrbkap.